# polyaie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  polyaie-flow.sh
Kernel_C++/: README.md  README1.md  mm_64_32_32.cpp
Kernel_C++/dsp_test/: kernel_config.h  mul.cpp
Kernel_C++/mm_64_32_32/: .AIE_SIM_CMD_LINE_OPTIONS  Makefile
include/polyaie/: CMakeLists.txt  Exporters.h  InitAllDialects.h  InitAllPasses.h  Passes.h  Passes.td  Utils.h
lib/: AffinePreprocess.cpp  CMakeLists.txt  ConvertToAIE.cpp
lib/Conversion/: CMakeLists.txt  ConvertAffineToAIE.cpp  Passes.cpp
lib/Dataflow/: CMakeLists.txt  Dataflow.cpp
lib/MemRefExt/: CMakeLists.txt  MemRefExt.cpp
lib/Support/: CMakeLists.txt  Utils.cpp
lib/Transforms/: BufferExtraction.cpp  BufferMemrefArg.cpp  BufferMemrefResult.cpp  BufferStateChangedMemref.cpp  CMakeLists.txt  CodeGenCleanup.cpp  ConvertToAIE.cpp  ConvertToDataflow.cpp  CreateDataflow.cpp  CreateIOProcess.cpp  CreateInterface.cpp  CreateMemrefSubview.cpp  CreateSubView.cpp  DataflowToAIE.cpp  DetectLoopReduction.cpp  DetectReduction.cpp  DoubleBuffer.cpp  ExplicitizeDependency.cpp  ExtractMemrefDependency.cpp  FlowPacketToCircuit.cpp  HoistMemrefSubview.cpp  HoistSubView.cpp  InsertGMIOAdapter.cpp  InsertIOFunc.cpp  LinkExternKernel.cpp  MaterializeBroadcast.cpp  Passes.cpp  (+12 more)
samples/: compile.sh
test/: 2mm.phism.mlir  2mm.pre.kern.plmr.ca.lt.mlir  CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tools/: CMakeLists.txt
tools/polyaie-opt/: CMakeLists.txt  polyaie-opt.cpp
tools/polyaie-translate/: CMakeLists.txt  polyaie-translate.cpp
(+832 files in other folders)
